# worldcup-2026-prediction

./: .dockerignore  .env  .env.example  .gitignore  .tmp_notebook_code.py  04_Phase4_ML_Modeling.ipynb  CI_CD_GUIDE.md  EXECUTIVE_SUMMARY_APRIL_2026.md  HEROKU_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_LOGGING_GUIDE.md  INGESTION_ARCHITECTURE.md  MLOps_walkthrough.md  MONITORING_PHASE2_GUIDE.md  PHASE_1B_PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  Procfile  README.md  SEGMENT_AWARE_DELIVERY_SUMMARY.md  SEGMENT_AWARE_HYBRID_GUIDE.md  SESSION_SUMMARY.md  TESTING_INFERENCE_LOGGING.md  check_phase4.py  docker-compose.yml  implementation_plan.md  load_data.py  pyproject.toml  pyrightconfig.json  pytest.ini  render.yaml  requirements.txt  run_dbt.py  run_pipeline.py  run_server.py  smoke_test.py  test_api_no_db.py  test_predict_local.py  verify_corrections.py  verify_dataset.py  walkthrough.md  (+1 more)
.agents/rules/: data-science-expert.md  web-devops.md
.agents/skills/data-science-expert/: SKILL.md
.agents/skills/data-science-expert/references/: eda_templates.md  etl_patterns.md  ml_evaluation.md  statistics_reference.md
.agents/skills/web-devops/: SKILL.md  web-devops.skill
.agents/skills/web-devops/references/: docker-kubernetes.md  github-actions.md  scaffolding.md
.github/workflows/: ci.yml  deploy.yml  retrain.yml
.streamlit/: config.toml
data/: README.md
data/bronze/: historical_standardized.csv
data/clean/: clean_matches.csv
data/output/: tournament_simulation_summary.csv
data/processed/: clean_matches.csv
data/raw/: api_matches_20260401_203818.json  international_results.csv
data/silver/: matches_cleaned_v1.csv
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt/models/: exposures.yml  sources.yml
dbt/models/bronze/: bronze.yml  bronze_all_matches.sql
dbt/models/gold/: gold.yml  gold_feature_dataset_curated.sql  gold_latest_team_snapshots.sql  gold_latest_training_run.sql  gold_team_feature_snapshots.sql  gold_training_runs_curated.sql
dbt/models/silver/: silver.yml  silver_matches_cleaned_curated.sql
dbt/tests/: assert_latest_team_snapshots_single_pipeline_run.sql  assert_latest_team_snapshots_unique.sql  assert_latest_training_metrics_in_range.sql  assert_serving_and_training_lineage_aligned.sql
docker/: docker-compose.yml
docker/api/: Dockerfile
docker/frontend/: Dockerfile
docker/postgres/: fixture.sql  init.sql
docs/: ARCHITECTURE.md  DEVELOPMENT_JOURNEY.md  QUICK_START.md  ROADMAP_HARDEN_PREDICT.md
docs/history/: DEPLOYMENT_CHECKLIST_PHASE1.md  LEAKAGE_FIXES_SUMMARY.md  PHASE_3B_SENIOR_FEATURES_SUMMARY.md  PROJECT_STATUS.md  TESTING_INFERENCE_LOGGING.md
models/: match_predictor.joblib  match_predictor_evaluation_report.json  match_predictor_evaluation_report.md  match_predictor_metrics.json  match_predictor_shadow.joblib  model_comparison_report.md
notebooks/: 01_data_foundation.ipynb  02_feature_engineering.ipynb  02_feature_engineering_CORRECTED.ipynb  03_modeling.ipynb  03_modelos_base_evaluacion.ipynb  04_Phase4_ML_Modeling.ipynb  04_poisson.ipynb  04_simulation.ipynb  04_tournament_simulator.ipynb  05_Rigorous_MLOps_Evaluation.ipynb
notebooks/archive/: WorldCup_Qatar2022_Predictor.ipynb
scripts/: 05_Rigorous_MLOps_Evaluation.py  rebuild_notebooks.py  run_dbt.py  test_predict_local.py
src/: __init__.py  db.py
src/api/: __init__.py  main.py
src/config/: settings.py  team_aliases.py
src/contracts/: __init__.py  data_contracts.py
src/database/: connection.py  persistence.py
src/frontend/: app.py
src/ingestion/clients/: __init__.py  api_client.py  api_data_loader.py  csv_client.py
src/ingestion/pipelines/: ingestion_pipeline.py
src/ingestion/utils/: __init__.py  international_validator.py  validator.py
src/modeling/: evaluation.py  features.py  hybrid_ensemble.py  hybrid_ensemble_segment_aware.py  inference_logger.py  predict.py  reporting.py  reporting_comparison.py  segment_routing.py  serving_store.py  team_confederations.py  train.py  tuning.py  two_stage.py  types.py
src/processing/: clean_matches.py
src/processing/pipelines/: processing_pipeline.py
src/processing/transformers/: __init__.py  elo.py  match_standardizer.py  opponent_strength.py  rolling_features.py
tests/: conftest.py  test_api.py  test_api_client.py  test_api_hardening.py  test_api_local.py  test_csv_client_url.py  test_data_contracts.py  test_database_persistence.py  test_db_connection.py  test_elo.py  test_feature_loading.py  test_hybrid_ensemble.py  test_hybrid_ensemble_segment_aware.py  test_inference_logger.py  test_ingestion.py  test_international_validator.py  test_model_evaluation.py  test_model_reporting.py  test_opponent_strength.py  test_predict.py  test_quality_improvements.py  test_reporting_comparison.py  test_rolling_features.py  test_run_dbt.py  test_run_pipeline.py  test_segment_aware_training_integration.py  test_serving_store.py  test_standardizer.py  test_team_aliases.py  test_team_confederations.py  test_tuning.py  test_two_stage.py
