[project]
name = "worldcup-2026-prediction"
version = "0.1.0"
description = "End-to-end pipeline for World Cup 2026 and qualifiers match prediction."
requires-python = ">=3.12"
dependencies = [
  "SQLAlchemy==2.0.48",
  "dbt-core==1.11.7",
  "dbt-postgres==1.10.0",
  "fastapi==0.135.3",
  "ipykernel==7.2.0",
  "joblib==1.5.3",
  "matplotlib==3.10.8",
  "numpy==2.4.4",
  "pandas==3.0.2",
  "psycopg2-binary==2.9.11",
  "pytest==9.0.2",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
  "scikit-learn==1.8.0",
  "seaborn==0.13.2",
  "uvicorn==0.42.0",
  "xgboost==3.2.0",
]

[tool.uv]
package = false

[tool.ruff.lint]
ignore = ["E402"] # Ignora la regla de imports al principio en este proyecto
